--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,38 @@
 body{
-    background-color: rgb(206, 141, 20);
+    background-color: rgb(0, 161, 161);
 }
 
 .top-menu{
-    height: 10px;
+    height: 50px;
+    margin-left: 25%;
+    margin-top: 1%;
+}
+
+.content-menu{
+    float: left;
+    display: block;
+    width: 20%;
+    height: inherit;
+    background-color: black;
+    color: white;
+    margin-left: 11px;
+    padding-left: 5px;
+    border: 1px solid white;
+    border-radius: 15px;
+}
+
+.content-menu .text-menu-top{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 21px;
+    width: 100%;
+    height: 50%;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.content-menu .text-menu-top a {
+    color: inherit;
+    text-decoration: none;
 }
 
 #enableEthereumButton{
@@ -17,6 +46,31 @@ body{
 }
 
 #enableEthereumButton:hover{
-    background-color: grey;
+    background-color: rgb(235, 173, 57);
     cursor: pointer;
+}
+
+#enableEthereumButton:active{
+    transform: scale(0.98);
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
+
+.chart-view{
+    margin-top: 50px;
+}
+
+.list-assets{
+    width: 60%;
+    height: auto;
+    margin-top: 150px;
+    margin-left: 15%;
+    padding-right: 4px;
+}
+
+.asset {
+    width: 100%;
+    height: 120px;
+    border: 2px solid white;
+    margin-top: 30px;
+    background-color: rgb(255, 165, 61);
 }
