--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,18 @@ body{
     font-size: 20px;
 }
 
+.change-day{
+    position: inherit;
+    float: left;
+    height: 100%;
+    width: 20%;
+    text-align: center;
+    margin-top: 49px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: green;
+}
+
 .asset img {
     width: 100%;
     height: 100%;
